clusters/home-lab-kubernetes-01/argocd/namespaces/istio-system/ingress/argocd.zufardhiyaulhaq.com/argocd-zufardhiyaulhaq-com-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd-zufardhiyaulhaq-com-vs
  namespace: istio-system
spec:
  hosts:
  - "argocd.zufardhiyaulhaq.com"
  gateways:
  - istio-system/argocd-zufardhiyaulhaq-com-gateway
  http:
  - name: "default-route"
    match:
    - uri:
        prefix: /
    route:
      - destination:
          port:
            number: 80
          host: argocd-server.argocd-system.svc.cluster.local
  exportTo:
    - "."
